--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -123,56 +123,72 @@ You can also load code from URL:
 ```excel
 =BOARDFLARE.PY.ARR("https://foo.com/code.py", {1,2})
 ```
-
 ### PY.BETA
 
-`PY.BETA` function has the same array input/output as `PY.ARR` but contains all the latest beta features/fixes before they are moved into the regular functions.  There are no noteworthy features to try in `PY.BETA` at the moment, so you can stick with `PY` and `PY.ARR` for now.
+`PY.BETA` has been updated to handle scalars the same as `PY` and arrays the same as `PY.ARR`.  It fundamentally operates on arrays so it can do both, but it has helpers to convert scalars to arrays and arrays to scalars so this is less tedious when handling scalars.  The plan is this code will replace the current `PY` function, and `PY.ARR` will be deprecated.
+
+On the input side, the conversion rules are outlined in the table below:
+
+| Input Type       | Conversion Rule             | Raw Input            | Global                |
+|------------------|-----------------------------|----------------------|-----------------------|
+| Cell             | Converted to a scalar       | `[[5]]`              | `5`                   |
+| Column           | Flattened to a simple array | `[[1], [2]]`         | `[1, 2]`              |
+| Row              | Flattened to a simple array | `[[1, 2]]`           | `[1, 2]`              |
+| Matrix (m x n)   | Untouched                   | `[[1, 2], [3, 4]]`   | `[[1, 2], [3, 4]]`    |
+
+So if you select a single cell for `data1`, instead of having to access the scalar with `data1[0][0]`, it will be converted to a scalar for you.  Similarly, if you select a column or a row, it will be flattened to a simple array.  If you need to know whether a simple array came from a column or row, you can access the raw input on the `data` global variable, which is an array of elements representing `data1`, `data2`, etc.
+
+On the output side, it is the opposite, as follows:
+
+| Output Type | Conversion Rule            | pyout               | Array Value to Excel       |
+|-------------|-----------------------------|---------------------|----------------------------|
+| Scalar      | Converted to an array cell  | `5`                 | `[[5]]`                    |
+| Array       | Converted to a row          | `[1, 2]`            | `[[1, 2]]`                 |
+| Matrix      | Untouched                   | `[[1, 2], [3, 4]]`  | `[[1, 2], [3, 4]]`         |
+
+So the clumsy example given earlier of trying to multiply two scalars:
+
+```excel
+=BOARDFLARE.PY.ARR("pyout = [[data1[0][0] * data2[0][0]]]", {5}, {3})
+```
+
+Could be written as:
+
+```excel
+=BOARDFLARE.PY.BETA("pyout = data1 * data2", 5, 3)
+```
+
+Or you could do the following, which shows how `data1`, `data2` row matrices have been flattened to simple arrays, and the resulting python list has been converted to a row matrix Excel is expecting, keeping your Python code simpler to write:
+
+```excel
+=BOARDFLARE.PY.BETA("pyout = [a * b for a, b in zip(data1, data2)]", {5,3}, {3,4})
+={15, 12}
+```
+
+So the best of both worlds in one function.
 
 ## Development
 
 ### Code from URL
 
-Code can only be loaded from a URL if it is served over HTTPS due to browser security restrictions.  Deploying your code to a URL has two key advantages:
-
-1. Centralized deployment.  Putting your Python code in a central location allows you to update it without having to update each Excel workbook that contains it.  
-
-2. Version control.  If the central location is either a git repository (e.g. GitHub) or a storage location deployed to from a git repository (e.g. Azure Storage) you can properly version control your code.
-
-A simple and free way to do this is to use a [GitHub Gist](https://gist.github.com/).  You can create a new Gist, paste your Python code into it, and then use the URL of the Gist in the `PY` function.  Make sure you click on the raw button in the Gist to get a URL that goes directly to your code [like this](https://gist.githubusercontent.com/bolleman/14e68b8d6a6e2897ef5f70dbd28ea7e3/raw/ce32551dd5df578371d70db563459d450921f13b/emails.py).
+Code can only be loaded from a URL if it is served over HTTPS due to browser security restrictions.  Deploying your code to a URL such as a [GitHub Gist](https://gist.github.com/) has the benefit of being able to update your function without having to update all the Excel workbooks using it, as well as providing better version control.  If you use a GitHub Gist, make sure you click on the raw button in the Gist to get a URL that goes directly to your code [like this](https://gist.githubusercontent.com/bolleman/14e68b8d6a6e2897ef5f70dbd28ea7e3/raw/ce32551dd5df578371d70db563459d450921f13b/emails.py).
 
 ### Local IDE
 
-If you are already using an IDE such as [VS Code](https://code.visualstudio.com/), pairing it up with something like [Live Server](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer) enables you to serve your local code files with live reload as follows: 
+Using an IDE such as [VS Code](https://code.visualstudio.com/) with something like [Live Server](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer) enables you to work with your local code files with live reload as follows: 
 
 ```excel
 =BOARDFLARE.PY.ARR("https://localhost:4000/mycode.py", {1,2})
 ```
 
-In the first phase of development it may be convenient to simply hardcode the data1, data2, ... globals into your code so that you can test directly in your IDE with your local Python runtime.  You can use the fact that the Python `sys.platform` in Excel will be `emscripten` to only use the hardcoded data outside Excel.  For example:
-
-```python
-import sys
-
-# Hard-code globals when NOT in Excel.
-if sys.platform != 'emscripten':
-    data1 = 2
-    data2 = 3
-
-# Print globals to console to check.
-print(f"data1: {data1}, data2: {data2}")
-
-pyout = data1 + data2
-```
-
 ### JupyterLite
 
-If you're familiar with JupyterLab or Notebooks, a great option is [JupyterLite](https://jupyterlite.readthedocs.io/en/stable/_static/lab/index.html) which is a JupyterLab distribution that runs in the browser using the same Pyodide Python kernal that this add-in is using.  This means that any code that runs in JupyterLite should run in Excel.  Right now you'll need to cut and paste your code into Excel, or push it to some location accessible by URL (e.g. GitHub Gist).  Note that the trick above of hard-coding globals will not work in JupyterLite, as the Python `sys.platform` will be the same as in Excel.  Instead you should load the globals in a previous cell so they are available to your code.
+[Jupyterlite](https://jupyterlite.readthedocs.io/en/stable/_static/lab/index.html) runs in the browser using the same Pyodide Python kernal that this add-in is using, so any code that runs in Jupyterlite should run in Python for Excel.  Once you have your code running in Jupyterlite, you can move it into Excel by copy/paste, or one of the following methods:
+- sync notebook to a GitHub Gist
+- load notebook code using the `BOARDFLARE.JL` function
+- use AI to help write code.
 
-Since JupyterLite stores its files in the browser IndexedDB, if we hosted a JupyterLite instance on the same sub-domain as our add-in (so that they could share the same storage), it would enable you to directly reference your code files in Jupyter from they `PY` functions, similar to using a URL.  This would provide the equivalent of live reload from a Jupyter notebook.  If this is something you think would be useful, please [let us know](/company/support).
-
-### ChatGPT
-
-[ChatGPT](https://chat.openai.com/) and similar tools can be used to generate Python code snippets.  You can then copy and paste these snippets into Excel or a Gist and load the code from a URL.  This can be a great way to quickly prototype code, especially if you're not a Python developer.
+** Details Coming Soon **
 
 ## Applications
 
@@ -187,6 +203,10 @@ Some example applications are as follows:
 4. **Calling APIs**:  For example, let's say you're trying to call a REST API and manipulate the JSON response into something useful.
 
 ## Changelog
+
+1.0.5 - 2024-10-09
+- `PY.BETA` handles both arrays and scalars with auto-conversion helpers.
+- Beta version of Jupyterlite with `BOARDFLARE.JL` function.
 
 1.0.4 - 2024-09-25
 - Added ability to load code from URL to `PY` and `PY.ARR` functions.  `PY.BETA` now has no new features, but will be where new features are tested before moving to `PY` and `PY.ARR`.
